<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <ImageButton
        android:id="@+id/backspace_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:src="@drawable/backspace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/post_detail_post_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/post_edit_button_text"
        android:textColor="@color/green"
        app:layout_constraintEnd_toStartOf="@id/post_detail_post_delete_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/post_detail_post_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/post_delete_button_text"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/post_detail_post_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/post_title_edittext_hint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_detail_post_delete_button" />

    <TextView
        android:id="@+id/post_detail_post_contents_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="top"
        android:hint="@string/post_contents_edittext_hint"
        android:minLines="20"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/post_detail_post_title_textview" />
</androidx.constraintlayout.widget.ConstraintLayout>